# Game-OpenGL

./: .gitignore  CMakeLists.txt  GameObject.cpp  GameObject.h  README.md  font.h  game.cpp  game.h  main.cpp  resource_mager.cpp  resource_mager.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
shaders/: font.vs.glsl  sprite.fs.glsl  sprite.vs.glsl
